Ticket #1576 (closed defect: fixed)

Opened 1 week ago

Last modified 6 days ago

Leaking per-thread msgStack

Reported by: funman Assigned to: courmisch
Priority: normal Milestone: 0.9.0-test1
Component: LibVLC Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: easy Work status: Not started

Description

==18559== Thread 1:
==18559== 
==18559== 48 (16 direct, 32 indirect) bytes in 1 blocks are definitely lost in loss record 12 of 74
==18559==    at 0x4C1FFAB: malloc (vg_replace_malloc.c:207)
==18559==    by 0x4EB4E20: GetContext (messages.c:637)
==18559==    by 0x4EB4EF4: msg_StackSet (messages.c:647)
==18559==    by 0x4EA493D: __module_Need (modules.c:633)
==18559==    by 0x4E6305F: __demux_New (demux.c:166)
==18559==    by 0x4E6B6DF: InputSourceInit (input.c:2254)
==18559==    by 0x4E6F393: Init (input.c:1179)
==18559==    by 0x4E71295: Run (input.c:517)
==18559==    by 0x59B7016: start_thread (in /lib/libpthread-2.7.so)
==18559==    by 0x5E9554C: clone (in /lib/libc-2.7.so)

src/misc/messages.c provide a message stack, to record the last message registered in this stack, which is thread-specific
This functionality is currently only used in input.c
The allocated message, and the allocated context are never freed

Serious candidate for deletion.

Change History

05/10/08 10:38:15 changed by courmisch

  • status changed from new to assigned.

05/10/08 22:22:38 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.