The TLS also needs to be cleaned up... should fix #1576